--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,14 +1,30 @@
-<p style="color: green"><%= notice %></p>
+<div class="recips-c">
+  <h3 class="recipes-h3">All Recipes</h3>
+  <div class="d-flex justify-content-end m-3">
+    <button class='food-new-btn'>
+      <%= link_to 'Add new recipe', new_recipe_path, class: "recipe-new-btn-t" %>
+    </button> 
+  </div>
 
-<h1>Recipes</h1>
+  
+  <div class="recipes-col">
+    <% @recipes.each do |recipe| %>
+      <%= link_to recipe_path(recipe.id), class: "each-recipe-link" do %>
+      <div class="each-recipe-c">
+      <div class="">
+        <h3><%= recipe.name %></h3>
+        
+        <% if can? :destroy, recipe %>
+        <%= button_to "Remove", recipe_path(recipe.id ), :method => :delete, class: "recipe-dlt-btn" %> 
+        <% end %>
 
-<div id="recipes">
-  <% @recipes.each do |recipe| %>
-    <%= render recipe %>
-    <p>
-      <%= link_to "Show this recipe", recipe %>
-    </p>
+      </div>
+      <div class="recipes-desc">
+        <p><%= recipe.description %></p>
+      </div>
+      </div>
+      <% end %>
   <% end %>
-</div>
+  </div>
 
-<%= link_to "New recipe", new_recipe_path %>
+</div>
