--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,9 +1,26 @@
-<h1>New recipe</h1>
+<div class="recipes-new-c">
+  <h3 class='recipes-new-h3'> Add Recipe</h3>
+  <%= form_with url: recipes_path, scope: :recipe do |form| %>
+    <div class="foods-new-div">
+    <%= form.label :Name, class:"form-label" %><br>
+    <%= form.text_field :name, class: 'form-control', require: true %>
+    </div>
 
-<%= render "form", recipe: @recipe %>
+    <div class="foods-new-div">
+    <%= form.label :Preparation_Time, class:"form-label" %><br>
+    <%= form.text_field :preparation_time, class: 'form-control', require: true %>
+    </div>
 
-<br>
+    <div class="foods-new-div">
+    <%= form.label :Cooking_Time, class:"form-label" %><br>
+    <%= form.text_field :cooking_time, class: 'form-control', require: true %>
+    </div>
+    
+    <div class="foods-new-div">
+    <%= form.label :Description, class:"form-label" %><br>
+    <%= form.text_area :description, class: 'form-control', require: true %>
+    </div>
 
-<div>
-  <%= link_to "Back to recipes", recipes_path %>
+    <%= form.submit "Submit", class: "foods-new-btn" %>
+  <% end %>
 </div>
