--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,14 +1,32 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Foods</h1>
-
-<div id="foods">
-  <% @foods.each do |food| %>
-    <%= render food %>
-    <p>
-      <%= link_to "Show this food", food %>
-    </p>
-  <% end %>
+<div class="foods-c">  
+  <h3 class="foods-h3">All Foods</h1>
+  <div class="d-flex justify-content-end m-3">
+    <button class='food-new-btn'>
+      <%= link_to 'Add new food', new_food_path, class: "food-new-btn-t" %>
+    </button> 
+  </div>
+  <table class="table m-3">
+    <thead>
+        <tr>
+        <th scope="col">Food</th>
+        <th scope="col">Measurement Unit</th>
+        <th scope="col">Unit Price</th>
+        <th scope="col">Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+      <% @foods.each do |food| %>
+        <tr>
+        <td scope="row"> <%= food.name %> </td>
+        <td> <%= food.measurement_unit %> </td>
+        <td>$<%= food.price %> </td>
+        <td> 
+          <% if can? :destroy, food %> 
+            <%= button_to "Delete", food_path(food.id ), :method => :delete, class: "food-dlt-btn" %> 
+          <% end %>
+        </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
-
-<%= link_to "New food", new_food_path %>
