--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -42,7 +42,7 @@
     <tbody>
     <% @recipe.recipe_foods.each do |recipe_food| %>
       <tr>
-        <th scope="row"><%= recipe_food.food.name %> </th>
+        <td scope="row"><%= recipe_food.food.name %> </td>
         <td><%= recipe_food.quantity %><%= recipe_food.food.measurement_unit %> </td>
         <td>  $<%= recipe_food.food.price*recipe_food.quantity %></td>
         <td class="show-btns"> 
